--- a/frontend/src/data/mockTasks.json
+++ b/frontend/src/data/mockTasks.json
@@ -1,10 +1,103 @@
-{
-    "title": "Finish Taxes",
-    "type": "SINGLE",
-    "description": "Complete yearly tax filing",
-    "difficulty": 4,
+[ { 
+    "id": 1, 
+    "title": "Go to the consulate", 
+    "type": "SINGLE", 
+    "description": "Visit the consulate for visa processing.", 
+    "difficulty": 2, 
     "targetPerWeek": null,
-    "completed": true,
-    "createdAt": "2025-02-01T12:00:00Z",
-    "completedAt": "2025-02-03T14:22:00Z"
-}
+    "completed": true, 
+    "createdAt": "2025-11-01T10:00:00Z", 
+    "completedAt": "2025-11-02T12:00:00Z",
+    "points": "10"
+ },
+     
+ { 
+    "id": 1, 
+    "title": "Stretch 2x a week", 
+    "type": "SINGLE", 
+    "description": "Stretching exercises twice a week to improve flexibility.", 
+    "difficulty": 1, 
+    "targetPerWeek": 2, 
+    "completed": false, 
+    "createdAt": "2025-11-01T10:05:00Z", 
+    "completedAt": null,
+    "points": "25"
+
+}, 
+{ 
+    "id": 1, 
+    "title": "Stretch 2x a week", 
+    "type": "SINGLE", 
+    "description": "Stretching exercises twice a week to improve flexibility.", 
+    "difficulty": 1, 
+    "targetPerWeek": 2, 
+    "completed": false, 
+    "createdAt": "2025-11-01T10:05:00Z", 
+    "completedAt": null,
+    "points": "60"
+
+}, 
+{ 
+    "id": 1, 
+    "title": "Complete the project", 
+    "type": "SINGLE", 
+    "description": "Finish the software development project.", 
+    "difficulty": 3, 
+    "targetPerWeek": 5, 
+    "completed": false, 
+    "createdAt": "2025-11-01T10:10:00Z", 
+    "completedAt": null,
+    "points": "50"
+    },
+    { 
+    "id": 1, 
+    "title": "Go to the consulate", 
+    "type": "HABIT", 
+    "description": "Visit the consulate for visa processing.", 
+    "difficulty": 2, 
+    "targetPerWeek": null,
+    "completed": true, 
+    "createdAt": "2025-11-01T10:00:00Z", 
+    "completedAt": "2025-11-02T12:00:00Z",
+    "points": "10"
+ },
+     
+ { 
+    "id": 1, 
+    "title": "Stretch 2x a week", 
+    "type": "HABIT", 
+    "description": "Stretching exercises twice a week to improve flexibility.", 
+    "difficulty": 1, 
+    "targetPerWeek": 2, 
+    "completed": false, 
+    "createdAt": "2025-11-01T10:05:00Z", 
+    "completedAt": null,
+    "points": "25"
+
+}, 
+{ 
+    "id": 1, 
+    "title": "Stretch 2x a week", 
+    "type": "HABIT", 
+    "description": "Stretching exercises twice a week to improve flexibility.", 
+    "difficulty": 1, 
+    "targetPerWeek": 2, 
+    "completed": false, 
+    "createdAt": "2025-11-01T10:05:00Z", 
+    "completedAt": null,
+    "points": "60"
+
+}, 
+{ 
+    "id": 1, 
+    "title": "Complete the project", 
+    "type": "HABIT", 
+    "description": "Finish the software development project.", 
+    "difficulty": 3, 
+    "targetPerWeek": 5, 
+    "completed": false, 
+    "createdAt": "2025-11-01T10:10:00Z", 
+    "completedAt": null,
+    "points": "50"
+    }  
+]
