Fleshed out a large portion of backend including auth. Just need business logic now

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,34 @@
-spring.application.name=GameOfLife
+spring.application.name=gameoflife
+server.port=3000
+server.address=0.0.0.0
+server.servlet.context-path=/api
+
+# ===============================
+# = DATABASE CONFIGURATION
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/game_of_life
+spring.datasource.username=user
+spring.datasource.password=user
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# = JPA / HIBERNATE CONFIGURATION
+# ===============================
+# Show SQL queries in the console
+# spring.jpa.show-sql=true
+
+# Format SQL output for readability (optional)
+# spring.jpa.properties.hibernate.format_sql=true
+
+# Automatically create / update / validate schema
+# (choose one: none | validate | update | create | create-drop)
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
+
+# less output
+logging.level.root=warn
+spring.main.banner-mode=off
+# logging.level.org.springframework.security=TRACE
