Saving changes to landing page and theme.css

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.servlet.context-path=/api
 # = DATABASE CONFIGURATION
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/game_of_life
-spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.username=root
+spring.datasource.password=Feather1795-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
